ci: unified dockerfile