@@ -1,13 +1,20 @@
-#Build
-FROM eclipse-temurin:17-jdk AS build
+# Этап 1: сборка
+FROM eclipse-temurin:17-jdk AS builder
 WORKDIR /app
-COPY . .
-RUN ./mvnw -q -DskipTests package
 
-#Run
+COPY mvnw .
+COPY .mvn .mvn
+COPY pom.xml .
+RUN chmod +x mvnw
+RUN ./mvnw dependency:go-offline
+
+COPY src src
+RUN ./mvnw clean package -DskipTests
+
+# Этап 2: прод-сервис
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0 -XX:+UseZGC"
-COPY --from=build /app/target/*.jar /app/app.jar
+COPY --from=builder /app/target/*.jar app.jar
+
 EXPOSE 8081
-ENTRYPOINT ["sh","-c","java $JAVA_OPTS -Dspring.profiles.active=prod -jar /app/app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
